--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,8 @@
   },
   "exclude": [
     "dist",
-    "node_modules"
+    "node_modules",
+    "hardhat.config.ts",
   ],
   "include": [
     "./src",
